--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/luxon": "^2.0.9",
     "@types/node": "^12.20.46",
     "@types/react": "^16.14.23",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.22",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.0",
+    "luxon": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
