--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/react-redux": "^7.1.22",
     "@types/uuid": "^8.3.4",
     "axios": "^0.26.0",
+    "chart.js": "^3.7.1",
     "luxon": "^2.3.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
@@ -47,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.7",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
