--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "budget-frontend",
   "version": "0.1.0",
+  "homepage": "https://mdesanker.github.io/budget-frontend",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.7.2",
@@ -31,7 +32,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -51,6 +54,7 @@
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-alpha.7",
     "autoprefixer": "^10.4.2",
+    "gh-pages": "^3.2.3",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23"
   }
